# fantasy-analysis

./: .env.example  .gitignore  analysis.py  config.py  database.py  demo.py  demo_demo_fantasy_football.db  demo_fantasy_football.db  draft_history  draft_history.json  espn.py  ingestion.py  main.py  notes.md  parse_broncos_coaching.py  plan.md  pyproject.toml  queries.py  scrape_broncos.py  test_espn.py  test_parse_broncos_coaching.py  test_player_ranks.py  test_team_performance.py
.claude/agents/: architect.md  dataanalyst.md  pythonengineer.md
analysis_output/: analysis_summary.txt  team_performance_results.json
artifacts/: qbs.csv  rbs.csv  tes.csv  wrs.csv
data_source/: 2021_broncos_coaching_staff.json  2021_denver_broncos_wikipedia.html  2021_denver_broncos_wikipedia.metadata.json  2022_broncos_coaching_staff.json  2022_denver_broncos_wikipedia.html  2022_denver_broncos_wikipedia.metadata.json  2023_broncos_coaching_staff.json  2023_denver_broncos_wikipedia.html  2023_denver_broncos_wikipedia.metadata.json  2024_broncos_coaching_staff.json  2024_denver_broncos_wikipedia.html  2024_denver_broncos_wikipedia.metadata.json  2024_qb.json  2024_rb.json  2024_te.json  2024_wr.json  2025_broncos_coaching_staff.json  2025_denver_broncos_wikipedia.html  2025_denver_broncos_wikipedia.metadata.json  players_data.json  teams.json
docs/: architecture_analysis.md  notes.md
tests/: conftest.py  test_analysis.py  test_database.py  test_ingestion.py  test_queries.py  test_scrape_broncos.py
